--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@openzeppelin/contracts": "^4.1.0",
     "@openzeppelin/test-helpers": "^0.5.10",
     "chai": "^4.3.4",
+    "dotenv": "^9.0.0",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.1.0",
     "hardhat": "^2.2.1",
+    "hardhat-deploy": "^0.7.5",
     "hardhat-gas-reporter": "^1.0.4",
     "solidity-coverage": "^0.7.16",
     "web3": "^1.3.5",
